testsuite/tests/properties/invalid_predicate/ok_one_unpassed_default_var.lkt
import common

class Example: BaseExample {
    @export fun prop(): Entity[FooNode] = {
        val _ = %predicate(Example.pred2, node.var1, node.var2);
        node.as_bare_entity
    }
}
